fixed user group deletion of authorized user